--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,58 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+@theme {
+  /* fonts */
+  --font-primary: "Teko";
+  --font-secondary: "Poppins";
+  
+  /* colors */
+  --color-primary: #252525;
+  --color-secondary: #6d6d6d;
+  --color-accent: #cbfe01;
+  --color-accent-hover: #c0ef06;
+
+  /* breakpoints */
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1200px;
+  --breakpoint-2xl: 1536px;
+
+
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply font-secondary text-secondary bg-[#f5f5f5];
+}
+
+.container {
+  @apply mx-auto px-4 sm:px-6 lg:px-32;
+}
+
+
+
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-primary text-secondary;
+}
+
+
+h1 {
+  @apply text-7xl xl:text-8xl uppercase leading-[80%];
+}
+
+h2 {
+  @apply text-5xl xl:text-6xl uppercase leading-[80%];
+}
+
+h3 {
+  @apply text-4xl xl:text-5xl uppercase leading-[80%];
+}
+
+h4 {
+  @apply text-3xl xl:text-4xl uppercase leading-[80%];
 }
